--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            width: 300px;
+            width: 600px;
             height: 400px;
             font-family: Arial, sans-serif;
             margin: 0;
@@ -12,29 +12,40 @@
             overflow: hidden;
         }
 
+        #menu {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+
+        button {
+            width: 20%;
+            padding: 5px;
+            cursor: pointer;
+            font-size: 12px;
+        }
+
         #output {
             width: 100%;
-            height: 350px;
+            height: 100%;
             overflow-y: scroll;
             white-space: pre-wrap; /* Preserve formatting */
             background-color: #f9f9f9;
             padding: 10px;
             border: 1px solid #ddd;
             box-sizing: border-box;
-        }
-
-        button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            cursor: pointer;
+            display: none;
         }
     </style>
 </head>
 <body>
-<h2>Etsy Scraper</h2>
-<button id="scrapeButton">Scrape Product</button>
+<div id="menu">
+    <button id="scrapeButton">Build listing</button>
+<!--    <button id="downloadButton" style="display: none;">Download Images</button>-->
+</div>
 <div id="output"></div>
+<script src="marked.js"></script>
 <script src="popup.js"></script>
+
 </body>
 </html>
